--- a/quiz/index.html
+++ b/quiz/index.html
@@ -1,11 +1,49 @@
-<title>Carousel</title>
+<title>↓ QUIZ B1 ↓</title>
   <meta charset="utf-8">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/gsap.min.js"></script>
   <script src="https://kit.fontawesome.com/c6d2413c18.js" crossorigin="anymous"></script>
   <script src="script.js"></script>
   <link rel="stylesheet" href="style.css">
   <body>
-      
+    <div>
+      <div class="question">
+         <h1>Question 1:</h1>
+         <p>Les délèquées sont ?</p>
+         <input id="Q1" type="checkbox">Keir
+         <input id="Q2" type="checkbox">Benjamin
+         <input id="Q3" type="checkbox">Alexis
+      </div>
+      <div class="question">
+         <h1>Question 2:</h1>
+         <p>La classe est en ?</p>
+         <input name="radio" type="radio">A9 <br>
+         <input name="radio" id="Q4" type="radio">A6 <br>
+         <input name="radio" type="radio">A7 <br>
+      </div>
+      <div class="img">
+         <h1>Question 3:</h1>
+         <p>Lequel est Mario ??</p>
+         <input name="radio2" type="radio"><img src="ck.gif">
+         <input id="Q5" name="radio2" type="radio"><img src="cringe.jpg">
+         <input name="radio2" type="radio"><img src="enorme.jpg">
+         <input name="radio2" type="radio"><img src="bouffe.jpg">
+      </div>
+      <div class="question">
+         <h1>Question 4:</h1>
+         <p>Ynov Posséde des etablissement à :</p>
+         <input id="Q6" type="checkbox">Toulouse
+         <input id="Q7" type="checkbox">Lille
+         <input id="Q8" type="checkbox">Marseille
+      </div>
+      <div class="question">
+         <h1>Question 5</h1>
+         <p>Quelle sont les profs ??</p>
+         <input id="Q9" type="checkbox"> Gabriel !!
+         <input  type="checkbox">Axel evidemment !!
+         <input id="Q10" type="checkbox"> Alan !!
+      </div>    
+      <div class="bouton">
+         <input type="button" value="Valider" onClick="valider()">
+      </div>
+   </div>
   </body>
