--- a/météo/index.html
+++ b/météo/index.html
@@ -1,5 +1,20 @@
-<title>Météo</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="script.js"></script>
-<link rel="stylesheet" href="style.css">
+<html>
+    <head>
+        <title>Météo</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        
+        <link rel="stylesheet" href="style.css">
+    </head>
+    
+<body>
+    <div>
+        <form>
+            <input type="text" id="ville" placeholder="Search" class="barre_recherche">
+            <br>
+            <input type="submit" id="button" />
+        </form>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
