--- a/météo/index.html
+++ b/météo/index.html
@@ -8,13 +8,20 @@
     </head>
     
 <body>
-    <div>
+    <div class="character-container">
+            <h1>Météo</h1>
+    </div>
+    <div class="search">
         <form>
             <input type="text" id="ville" placeholder="Search" class="barre_recherche">
             <br>
-            <input type="submit" id="button" />
+            <input type="submit" id="button">
         </form>
     </div>
-    <script src="script.js"></script>
+    <div class="wheatherContainer">
+        <p id="Temp"></p>
+        <p id="finalWheather"></p>
+    </div>
+        <script src="script.js"></script>
 </body>
 </html>
