--- a/quiz/index.html
+++ b/quiz/index.html
@@ -1,4 +1,4 @@
-<title>↓ QUIZ B1 ↓</title>
+<title>↓ QUIZ B1 ↓</title> <!--Quiz a point négatif-->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://kit.fontawesome.com/c6d2413c18.js" crossorigin="anymous"></script>
@@ -23,10 +23,10 @@
       <div class="img">
          <h1>Question 3:</h1>
          <p>Lequel est Mario ??</p>
-         <input name="radio2" type="radio"><img src="ck.gif">
-         <input id="Q5" name="radio2" type="radio"><img src="cringe.jpg">
-         <input name="radio2" type="radio"><img src="enorme.jpg">
-         <input name="radio2" type="radio"><img src="bouffe.jpg">
+         <input name="radio2" type="radio"><img src="img/ck.gif">
+         <input id="Q5" name="radio2" type="radio"><img src="img/cringe.jpg">
+         <input name="radio2" type="radio"><img src="img/enorme.jpg">
+         <input name="radio2" type="radio"><img src="img/bouffe.jpg">
       </div>
       <div class="question">
          <h1>Question 4:</h1>
