--- a/fond animé/index.html
+++ b/fond animé/index.html
@@ -1,15 +1,21 @@
-<title>UwU</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="https://kit.fontawesome.com/c6d2413c18.js" crossorigin="anymous"></script>
-<script src="script.js"></script>
-<link rel="stylesheet" href="style.css">
-<body>
-    <div>
-        <img src="left-part.png">
-    </div>
-    <div>
-        <img src="seq-a.png">
-    </div>
-    
-</body>
+<!DOCTYPE html>
+<html>
+   <head>
+      <meta charset="UTF-8">
+      <link rel="stylesheet" href="style.css">
+      <link rel="shortcut icon" href="fire.ico" type="image/x-icon">
+      <title>Ice & Fire</title>
+   </head>
+   <body>
+      <div class="first"></div>
+      <div class="second"></div>
+      <div>
+         <div class="divided_background">
+            <img src="img/left-part.png" class="left-part"> 
+            <img src="img/right-part.png" class="right-part">
+         </div>  
+      </div>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+      <script src="script.js"></script>
+   </body>
+</html>
