--- a/météo/index.html
+++ b/météo/index.html
@@ -6,8 +6,7 @@
         
         <link rel="stylesheet" href="style.css">
     </head>
-<body>
-
+<body id="fond">
     <div class="search">
         <form>
             <input type="text" id="ville" placeholder="Search" class="barre_recherche">
@@ -19,6 +18,8 @@
         <p id="Temp"></p>
         <p id="finalWheather"></p>
     </div>
-        <script src="script.js"></script>
+    <div id="icon">
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
